lecture8/demo-deploy-mod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-edu-deployment
spec:
  selector:
    matchLabels:
      app: k8s-edu-app
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-edu-app
        version: blue
    spec:
      containers:
        - name: k8s-edu-app
          image: ydcho0902/k8s-edu:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
      imagePullSecrets:
        - name: k8s-edu-dockerhub-secret
      nodeSelector:
        kubernetes.io/hostname: worker01
