lecture8/demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-edu-deployment
spec:
  selector:
    matchLabels:
      app: k8s-edu-app
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-edu-app
        version: blue
    spec:
      containers:
        - name: k8s-edu-app
          image: ydcho0902/k8s-edu:v0.0.1      # dockerhub image repository : repo/image명:Tag
          imagePullPolicy: IfNotPresent        # k8s 클러스터에 다운로드 된 이미지 없으면 다운 or Always
          ports:
            - name: http
              containerPort: 8080              # demo.jar 실행 포트
              protocol: TCP
          resources:                           # pod 사용 리소스 설정 블록
            requests:                          # 생성시 필요한 최소 리소스
              cpu: "1"
              memory: "2Gi"
            limits:                            # pod가 사용 가능한 최대 리소스
              cpu: "1"
              memory: "2Gi"
          env:                                 # pod 내 환경 변수 설정
            - name: SPRING_PROFILES_ACTIVE     # spring profile 설정
              value: prod                      # 상용(prod) 환경
      imagePullSecrets:                        # dockerhub 이미지 pull 위한 secret
        - name: k8s-edu-dockerhub-secret
      nodeSelector:                            # pod가 실행 될 node 설정
        kubernetes.io/hostname: worker01

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-edu-service
spec:
  selector:
    app: k8s-edu-app
    version: blue  # 기본적으로 Blue 배포에 연결
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080                        # deployment에서 설정한 컨테이너 포트 매핑

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-edu-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "k8s.211.253.25.128.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-edu-service
                port:
                  number: 80
